<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Favorites">

    <ImageView
        android:id="@+id/imageViewGame"
        android:layout_width="360dp"
        android:layout_height="196dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewShow"
        android:layout_width="180dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMovie"
        android:layout_width="180dp"
        android:layout_height="275dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewYourShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/your_favorite_show_is"
        app:layout_constraintBottom_toTopOf="@+id/imageViewShow"
        app:layout_constraintEnd_toEndOf="@+id/imageViewShow"
        app:layout_constraintStart_toStartOf="@+id/imageViewShow" />

    <TextView
        android:id="@+id/textViewYourGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/your_favorite_game_is"
        app:layout_constraintBottom_toTopOf="@+id/imageViewGame"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGame"
        app:layout_constraintStart_toStartOf="@+id/imageViewGame" />

    <TextView
        android:id="@+id/textViewYourMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/your_favorite_movie_is"
        app:layout_constraintBottom_toTopOf="@+id/imageViewMovie"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMovie"
        app:layout_constraintStart_toStartOf="@+id/imageViewMovie" />

    <Button
        android:id="@+id/buttonChoicesFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Choices"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageViewGame"
        app:layout_constraintStart_toStartOf="@+id/imageViewGame"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGame" />

    <TextView
        android:id="@+id/textViewShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageViewShow"
        app:layout_constraintStart_toStartOf="@+id/imageViewShow"
        app:layout_constraintTop_toBottomOf="@+id/imageViewShow" />

    <TextView
        android:id="@+id/textViewMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMovie"
        app:layout_constraintStart_toStartOf="@+id/imageViewMovie"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMovie" />

</androidx.constraintlayout.widget.ConstraintLayout>